--- a/index.html
+++ b/index.html
@@ -69,23 +69,17 @@
             });
 
             if (unit.length > 0) {
-                var potential = unit[0].properties.onshore_wind_mw
-                if (unit[0].properties.relative_onshore_wind) {
-                    var potential_600 = potential / unit[0].properties.relative_onshore_wind;
-                } else {
-                    var potential_600 = 0;
-                }
-                if (potential > 1) {
-                    var potential_unit = "MW";
-                } else {
-                    var potential_unit = "kW";
-                    potential = potential * 1000;
-                    potential_600 = potential_600 * 1000;
-                }
+                var potential_600 = unit[0].properties.onshore_wind_mw_600
+                var potential_800 = unit[0].properties.onshore_wind_mw_800
+                var potential_1000 = unit[0].properties.onshore_wind_mw_1000
+                var potential_1200 = unit[0].properties.onshore_wind_mw_1200
+                var potential_unit = "MW";
                 document.getElementById('pd').innerHTML =
                     '<p>in <strong>' + unit[0].properties.name + '</strong><br> ' +
-                    '<strong>' + potential.toLocaleString('en', {maximumFractionDigits : 0}) + '</strong> ' + potential_unit + ' at 1000 m<br>' +
-                    '<strong>' + potential_600.toLocaleString('en', {maximumFractionDigits : 0}) + '</strong> ' + potential_unit + ' at 600 m<br>';
+                    '<strong>' + potential_600.toLocaleString('en', {maximumFractionDigits : 0}) + '</strong> ' + potential_unit + ' bei 600 m<br>' +
+                    '<strong>' + potential_800.toLocaleString('en', {maximumFractionDigits : 0}) + '</strong> ' + potential_unit + ' bei 800 m<br>' +
+                    '<strong>' + potential_1000.toLocaleString('en', {maximumFractionDigits : 0}) + '</strong> ' + potential_unit + ' bei 1000 m<br>' +
+                    '<strong>' + potential_1200.toLocaleString('en', {maximumFractionDigits : 0}) + '</strong> ' + potential_unit + ' at 1200 m<br>';
             } else {
                 document.getElementById('pd').innerHTML = '<p>Hover über eine Gegend für Details.<br>Zoom um zwischen administrativen Ebenen zu wechseln.</p>';
             }
@@ -99,45 +93,45 @@
             map.on("mousemove", "national", function(e) {
                 if (e.features.length > 0) {
                     if (hoveredStateNationId) {
-                        map.setFeatureState({source: 'national', sourceLayer: 'nationaltechnicalpotentialenvprotection1000', id: hoveredStateNationId}, { hover: false});
+                        map.setFeatureState({source: 'national', sourceLayer: 'nationaltechnicalpotentialenvprotectionalldistances', id: hoveredStateNationId}, { hover: false});
                     }
                     hoveredStateNationId = e.features[0].id;
-                    map.setFeatureState({source: 'national', sourceLayer: 'nationaltechnicalpotentialenvprotection1000', id: hoveredStateNationId}, { hover: true});
+                    map.setFeatureState({source: 'national', sourceLayer: 'nationaltechnicalpotentialenvprotectionalldistances', id: hoveredStateNationId}, { hover: true});
                 }
             });
             map.on("mouseleave", "national", function() {
                 if (hoveredStateNationId) {
-                    map.setFeatureState({source: 'national', sourceLayer: 'nationaltechnicalpotentialenvprotection1000', id: hoveredStateNationId}, { hover: false});
+                    map.setFeatureState({source: 'national', sourceLayer: 'nationaltechnicalpotentialenvprotectionalldistances', id: hoveredStateNationId}, { hover: false});
                 }
                 hoveredStateNationId =  null;
             });
             map.on("mousemove", "regional", function(e) {
                 if (e.features.length > 0) {
                     if (hoveredStateRegionId) {
-                        map.setFeatureState({source: 'regional', sourceLayer: 'regionaltechnicalpotentialenvprotection1000', id: hoveredStateRegionId}, { hover: false});
+                        map.setFeatureState({source: 'regional', sourceLayer: 'regionaltechnicalpotentialenvprotectionalldistances', id: hoveredStateRegionId}, { hover: false});
                     }
                     hoveredStateRegionId = e.features[0].id;
-                    map.setFeatureState({source: 'regional', sourceLayer: 'regionaltechnicalpotentialenvprotection1000', id: hoveredStateRegionId}, { hover: true});
+                    map.setFeatureState({source: 'regional', sourceLayer: 'regionaltechnicalpotentialenvprotectionalldistances', id: hoveredStateRegionId}, { hover: true});
                 }
             });
             map.on("mouseleave", "regional", function() {
                 if (hoveredStateRegionId) {
-                    map.setFeatureState({source: 'regional', sourceLayer: 'regionaltechnicalpotentialenvprotection1000', id: hoveredStateRegionId}, { hover: false});
+                    map.setFeatureState({source: 'regional', sourceLayer: 'regionaltechnicalpotentialenvprotectionalldistances', id: hoveredStateRegionId}, { hover: false});
                 }
                 hoveredStateRegionId =  null;
             });
             map.on("mousemove", "municipal", function(e) {
                 if (e.features.length > 0) {
                     if (hoveredStateMunicipalityId) {
-                        map.setFeatureState({source: 'municipal', sourceLayer: 'municipaltechnicalpotentialenvprotection1000', id: hoveredStateMunicipalityId}, { hover: false});
+                        map.setFeatureState({source: 'municipal', sourceLayer: 'municipaltechnicalpotentialenvprotectionalldistances', id: hoveredStateMunicipalityId}, { hover: false});
                     }
                     hoveredStateMunicipalityId = e.features[0].id;
-                    map.setFeatureState({source: 'municipal', sourceLayer: 'municipaltechnicalpotentialenvprotection1000', id: hoveredStateMunicipalityId}, { hover: true});
+                    map.setFeatureState({source: 'municipal', sourceLayer: 'municipaltechnicalpotentialenvprotectionalldistances', id: hoveredStateMunicipalityId}, { hover: true});
                 }
             });
             map.on("mouseleave", "municipal", function() {
                 if (hoveredStateMunicipalityId) {
-                    map.setFeatureState({source: 'municipal', sourceLayer: 'municipaltechnicalpotentialenvprotection1000', id: hoveredStateMunicipalityId}, { hover: false});
+                    map.setFeatureState({source: 'municipal', sourceLayer: 'municipaltechnicalpotentialenvprotectionalldistances', id: hoveredStateMunicipalityId}, { hover: false});
                 }
                 hoveredStateMunicipalityId =  null;
             });
