Switch to German number formatting

--- a/index.html
+++ b/index.html
@@ -160,10 +160,10 @@
                 var potential_unit = "MW";
                 document.getElementById('pd').innerHTML =
                     '<p>in <strong>' + unit[0].properties.name + ':</strong><br> ' +
-                    '<strong>' + potential_600.toLocaleString('en', {maximumFractionDigits : 0}) + '</strong> ' + potential_unit + ' bei 600 m Mindestabstand<br>' +
-                    '<strong>' + potential_800.toLocaleString('en', {maximumFractionDigits : 0}) + '</strong> ' + potential_unit + ' bei 800 m Mindestabstand<br>' +
-                    '<strong>' + potential_1000.toLocaleString('en', {maximumFractionDigits : 0}) + '</strong> ' + potential_unit + ' bei 1000 m Mindestabstand<br>' +
-                    '<strong>' + potential_1200.toLocaleString('en', {maximumFractionDigits : 0}) + '</strong> ' + potential_unit + ' bei 1200 m Mindestabstand<br>';
+                    '<strong>' + potential_600.toLocaleString('de', {maximumFractionDigits : 0}) + '</strong> ' + potential_unit + ' bei 600 m Mindestabstand<br>' +
+                    '<strong>' + potential_800.toLocaleString('de', {maximumFractionDigits : 0}) + '</strong> ' + potential_unit + ' bei 800 m Mindestabstand<br>' +
+                    '<strong>' + potential_1000.toLocaleString('de', {maximumFractionDigits : 0}) + '</strong> ' + potential_unit + ' bei 1000 m Mindestabstand<br>' +
+                    '<strong>' + potential_1200.toLocaleString('de', {maximumFractionDigits : 0}) + '</strong> ' + potential_unit + ' bei 1200 m Mindestabstand<br>';
             } else {
                 document.getElementById('pd').innerHTML = '<p>Hover über eine Gegend für Details.<br>Zoom um zwischen administrativen Ebenen zu wechseln.</p>';
             }
