Update legend once more

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
 
         map.getCanvas().style.cursor = 'default';
 
-        var layers = ['> 50% des Potenzials bei 600 m', '~50% des Potenzials bei 600 m', '< 50% des Potenzials bei 600 m', '0 MW'];
+        var layers = ['100-50% des Potenzials bei 600 m', '~50% des Potenzials bei 600 m', '50-0% des Potenzials bei 600 m', '0 MW'];
         var colors = [COLOR_HIGH_POTENTIAL, COLOR_NEUTRAL, COLOR_LOW_POTENTIAL, COLOR_MISSING];
 
         for (i = 0; i < layers.length; i++) {
