Add study itself to method description

--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <div id="infotext">
             <h2>Windpotenzial an Land</h2>
             <p>
-                In dieser Studie untersuchen wir, wie der Mindestabstand von Windkraftanlagen zu
+                In dieser Studie (Tröndle, Süsser, Lilliestam, 2019) untersuchen wir, wie der
+                Mindestabstand von Windkraftanlagen zu
                 Siedlungsgebieten das Windpotenzial einschränkt. Um dies zu zeigen, und auch zu
                 belegen, welcher Mindestabstand einen weiteren Ausbau hin zur Zielerreichung
                 2030 und 2050 ermöglichen könnte, untersuchen wir das Potential mit
@@ -53,11 +54,12 @@
                 technisch-geografische Bedingungen und durch die Mindestabstandsregel eingeschränkt
                 ist. Da wir explizit keine gegebenen Flächennutzungspläne verwenden, zeigen wir mit
                 unserer Methode das maximal mögliche Windenergiepotential. Das gleiche Modell wurde
-                für weitere Potentialstudien verwendet und veröffentlicht (siehe Tröndle et al., 2019).
+                für weitere Potentialstudien verwendet und veröffentlicht
+                (siehe Tröndle, Pfenninger, Lilliestam, 2019).
             </p>
             <p>
                 Wir bestimmen das verfügbare Flächenpotenzial anhand von Satellitendaten. Wir legen
-                ein 10 Bo- gensekunden-Raster (~300 m) über Deutschland und bestimmen für jede Zelle,
+                ein 10 Bogensekunden-Raster (~300 m) über Deutschland und bestimmen für jede Zelle,
                 ob und zu welchem Teil sie für Windkraft nutzbar ist. Wir wenden dazu vier
                 Ausschlusskriterien an: aktuelle Landnutzung und Bodenbedeckung
                 (European Space Agency, 2010), Höhenprofil (Reuter et al., 2007),
@@ -77,10 +79,17 @@
                 Die Unsicherheit in der Schätzung des installierbaren Potenzials ergibt sich aus der
                 vereinfachenden Annahme der Gleichwertigkeit der Flächen und der Art der installierten
                 Windturbinen. Darüber hinaus beeinträchtigen dicht stehende Windturbinen die gegenseitige
-                Stromproduktion negativ (Adaramola and Krogstad, 2011), weswegen ein größerer Abstand
+                Stromproduktion negativ (Adaramola und Krogstad, 2011), weswegen ein größerer Abstand
                 zwischen den Turbinen durchaus sinnvoll sein kann.
             </p>
             <ul>
+                <li>
+                    Tröndle, T., Süsser, D., Lilliestam, J., 2019. Ohne Windenergie keine
+                    Energiewende. Institute for Advanced Sustainability Studies, Potsdam.
+                    <a href="https://doi.org/10.2312/iass.2019.052">
+                        https://doi.org/10.2312/iass.2019.052
+                    </a>
+                </li>
                 <li>Tröndle, T., Pfenninger, S., Lilliestam, J., 2019. Home-made or imported: on the
                     possibility for renewable electricity autarky on all scales in Europe. Energy
                     Strategy Reviews 26.
