Fix consistency with spelling of 'Potenzial'

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
     </div>
     <div class='map-overlay' id='legend'>
-        <h2>Das Potential bei 1000 m ist</h2>
+        <h2>Das Potenzial bei 1000 m ist</h2>
     </div>
     <div class='map-overlay' id="info" onclick="hideInfo()">
         <div id="infotext">
@@ -48,13 +48,13 @@
                 Mindestabstand von Windkraftanlagen zu
                 Siedlungsgebieten das Windpotenzial einschränkt. Um dies zu zeigen, und auch zu
                 belegen, welcher Mindestabstand einen weiteren Ausbau hin zur Zielerreichung
-                2030 und 2050 ermöglichen könnte, untersuchen wir das Potential mit
+                2030 und 2050 ermöglichen könnte, untersuchen wir das Potenzial mit
                 Mindestabständen 600-1200 m, in 200 m-Schritten. In unserer Untersuchung bestimmen
                 wir das technische Potenzial, also das Potenzial, das ausschließlich durch
                 technisch-geografische Bedingungen und durch die Mindestabstandsregel eingeschränkt
                 ist. Da wir explizit keine gegebenen Flächennutzungspläne verwenden, zeigen wir mit
-                unserer Methode das maximal mögliche Windenergiepotential. Das gleiche Modell wurde
-                für weitere Potentialstudien verwendet und veröffentlicht
+                unserer Methode das maximal mögliche Windenergiepotenzial. Das gleiche Modell wurde
+                für weitere Potenzialstudien verwendet und veröffentlicht
                 (siehe Tröndle, Pfenninger, Lilliestam, 2019).
             </p>
             <p>
